[gd_scene load_steps=2 format=3 uid="uid://bujjba3nge54o"]

[ext_resource type="Script" path="res://addons/reaction/components/ReactionUIListObjectForm.gd" id="1_04rig"]

[node name="ReactionUIListObjectForm" type="MarginContainer"]
script = ExtResource("1_04rig")
objects_to_add_data_array = null

[node name="Rows" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AddButtonsContainer" type="HBoxContainer" parent="Rows"]
layout_mode = 2

[node name="AddObjectsMenuButton" type="MenuButton" parent="Rows/AddButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select to object to add..."

[node name="ObjectsScrollContainer" type="ScrollContainer" parent="Rows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ObjectsRows" type="VBoxContainer" parent="Rows/ObjectsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
